clusters/home/apps/linkstack/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: linkstack
spec:
  selector:
    matchLabels:
      app: linkstack
  template:
    metadata:
      labels:
        app: linkstack
    spec:
      containers:
      - name: linkstack
        imagePullPolicy: IfNotPresent
        image: linkstackorg/linkstack:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: linkstack
          mountPath: /htdocs
      volumes:
        - name: linkstack
          persistentVolumeClaim:
            claimName: linkstack
